--- a/ExJSswitch.css
+++ b/ExJSswitch.css
@@ -19,6 +19,15 @@ h2 {
 	
 }
 
+h3 {
+	clear: both;
+	font-size: 45px;
+	color: black;
+	text-align: center;
+	padding-top: 30px;
+	
+}
+
 body {
 	background-color: #FCF;
 
